p2/confs/app1-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app1-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: app1
    
  template:
    metadata:
      labels:
        app: app1
  
    spec:
      containers:
      - name: app1
        image: schamizo/app1-image:1.0
        ports:
        - containerPort: 80
