p2/confs/app2-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app2-deployment

spec:
  replicas: 3
  
  selector:
    matchLabels:
      app: app2
  
  template:
    metadata:
      labels:
        app: app2
  
    spec:
      containers:
        - name: app2
          image: schamizo/app2-image:1.0
          ports:
            - containerPort: 80
