p2/confs/app3-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: app3-service

spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
