p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: apps-ingress

spec:
  ingressClassName: traefik
 
  rules:
    - host: app1.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app1-service
              port:
                number: 80
  
    - host: app2.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app2-service
              port:
                number: 80

    - host: ""
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app3-service
              port:
                number: 80
